--- a/src/style.css
+++ b/src/style.css
@@ -441,12 +441,11 @@ html, body {
     }
 
     .drawing {
-        margin-top: -20px   ;
+        margin-top: -20px;
         height: 120px;
     }
     
     .bottomStand {
-        background: black;
         width: 150px;
         height: 5px;
         top: 150px;
@@ -627,4 +626,120 @@ html, body {
         background-color: #c9e7ff;
     }
     
+}
+
+@media only screen and (max-width: 700px) and (orientation: landscape) {
+    .drawing {
+        margin-top: -30px;
+        height: 120px;
+    }
+    
+    .bottomStand {
+        width: 150px;
+        height: 5px;
+        top: 120px;
+        right: -15px;
+        
+    }
+    
+    .verticalStand {
+        background: black;
+        width: 5px;
+        height: 120px;
+        margin-left: 40px;
+        
+    }
+    
+    .topStand {
+        background: black;
+        height: 5px;
+        width: 100px;
+        margin-left: 40px;
+        
+    }
+    
+    .rightLedge {
+        background: black;
+        width: 45px;
+        height: 5px;
+        top: 90px;
+        margin-right: 35px;
+        rotate: 40deg;
+        transform-origin: left bottom;
+    }
+    
+    .leftLedge {
+        background: black;
+        width: 45px;
+        height: 5px;
+        top: 90px;
+        margin-right: -35px;
+        rotate: -40deg;
+        transform-origin: right bottom;
+    }
+    
+    .hanger {
+        background: black;
+        width: 5px;
+        height: 15px;
+        top: 0;
+        right: -20px;
+    }
+    
+    .head {
+        border-radius: 100%;
+        border: 5px solid;
+        width: 13px;
+        height: 13px;
+        top: 15px;
+        right: -29.5px;
+    }
+    
+    .body {
+        background: black;
+        width: 5px;
+        height: 35px;
+        top: 35px;
+        right: -20px;
+    }
+    
+    .leftArm {
+        background: black;
+        width: 20px;
+        height: 5px;
+        top: 40px;
+        right: -20px;
+        rotate: -40deg;
+        transform-origin: right bottom;
+    }
+    
+    .rightArm {
+        background: black;
+        width: 20px;
+        height: 5px;
+        top: 40px;
+        right: -35px;
+        rotate: 40deg;
+        transform-origin: left bottom;
+    }
+    
+    .leftLeg {
+        background: black;
+        width: 25px;
+        height: 5px;
+        top: 65px;
+        right: -20px;
+        rotate: -60deg;
+        transform-origin: right bottom;
+    }
+    
+    .rightLeg {
+        background: black;
+        width: 25px;
+        height: 5px;
+        top: 65px;
+        right: -40px;
+        rotate: 60deg;
+        transform-origin: left bottom;
+    }
 }
